<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.andre.calendaralarm.AddActivity">

    <EditText
        android:id="@+id/DateSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/DateLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/DateLabel"
        app:layout_constraintLeft_toRightOf="@id/DateLabel"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/date"
        android:inputType="date"
        android:onClick="setDate"
         />

    <TextView
        android:id="@+id/DateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="20dp"
        android:text="@string/date_text_label"
        android:textSize="20dp"/>


    <TextView
        android:id="@+id/TimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/DateLabel"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/DateLabel"
        app:layout_constraintTop_toBottomOf="@+id/DateLabel"
        android:padding="20dp"
        android:text="@string/time_text_label"
        android:textSize="20dp"
         />

    <EditText
        android:id="@+id/TimeSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TimeLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_constraintLeft_toRightOf="@+id/TimeLabel"
        app:layout_constraintBaseline_toBaselineOf="@+id/TimeLabel"
        app:layout_constraintTop_toBottomOf="@id/DateSelect"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/time_edit_text"
        android:inputType="time"
        android:onClick="setTime"
         />

    <Button
        android:id="@+id/DoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/TimeSelect"
        app:layout_constraintLeft_toRightOf="@id/TimeLabel"
        android:text="@string/done_button_text"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:padding="10dp"
        android:onClick="done"
        android:gravity="center"
        android:enabled="false"
        />

</android.support.constraint.ConstraintLayout>
